Fixed word wrapping in 'type' effect areas

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -41,6 +41,7 @@ img {
   padding: 0;
   display: inline-block;
   vertical-align: bottom;
+  white-space: nowrap;
 }
 
 .typing {
